WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207191
Align getDisplayMedia() with spec
https://bugs.webkit.org/show_bug.cgi?id=207191
Summary
Align getDisplayMedia() with spec
Alex Bakoushin
Reported
2020-02-04 02:02:44 PST
Currently, calling navigator.mediaDevices.getDisplayMedia() with no parameters throws a TypeError. But according to the spec, the first and only parameter is optional. See:
https://www.w3.org/TR/screen-capture/#mediadevices-additions
Also, according to the spec, the first parameter type is DisplayMediaStreamConstraints, which defaults to: { video = true; audio = false; } See:
https://www.w3.org/TR/screen-capture/#dom-displaymediastreamconstraints
Expected behavior: Calling getDisplayMedia() with no parameters will not throw an error, but will use the defaults of DisplayMediaStreamConstraints.
Attachments
Patch
(4.77 KB, patch)
2020-02-07 07:09 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-04 09:12:42 PST
<
rdar://problem/59151017
>
youenn fablet
Comment 2
2020-02-07 07:09:15 PST
Created
attachment 390083
[details]
Patch
WebKit Commit Bot
Comment 3
2020-02-07 10:41:47 PST
Comment on
attachment 390083
[details]
Patch Clearing flags on attachment: 390083 Committed
r256034
: <
https://trac.webkit.org/changeset/256034
>
WebKit Commit Bot
Comment 4
2020-02-07 10:41:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug