Align getDisplayMedia() with spec https://bugs.webkit.org/show_bug.cgi?id=207191 <rdar://problem/59151017>

Reviewed by Eric Carlson.

Source/WebCore:

Update WebIDL as per spec to have the correct default values for getDisplayMedia.
Covered by updated test.

* Modules/mediastream/MediaDevices.cpp:
(WebCore::MediaDevices::getDisplayMedia):
* Modules/mediastream/MediaDevices.h:
* Modules/mediastream/MediaDevices.idl:

LayoutTests:

* fast/mediastream/screencapture-user-gesture.html:


Canonical link: https://commits.webkit.org/220391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256034 268f45cc-cd09-0410-ab3c-d52691b4dbfc